# chainlit_simple_chatbot

./: pyproject.toml
src/openai_agent_sdk_class_01/: __init__.py  chatbot.py  config.py
src/openai_agent_sdk_class_01/tools/: tool.py
